# zephyr

./: .gitignore  LICENSE  README-zh.md  README.md  meson.build  puff1.bash  zephyr1.1.in  zephyr1.bash
c/: README-zh.md  README.md  meson.build  puff1.1.in
c/debian/: changelog  control
c/po/: de.po  eo.po  fr.po  ko.po  th.po
c/src/: Makefile  c_pch.h  lib.c  lib.h
c/tests/: puff1_test.c
cs/: .gitignore  README-zh.md  README.md  meson.build  zephyr.sln
cs/apps/Puff1/: Program.cs  Puff1.csproj
cs/apps/Puff1/Resources/: I18n.cs  Strings.de.resx  Strings.eo.resx  Strings.fr.resx  Strings.it.resx  Strings.ja.resx  Strings.ko.resx  Strings.resx  Strings.th.resx  Strings.vi.resx  Strings.zh-Hans.resx  Strings.zh-Hant.resx
cs/debian/: control
cs/lib/Zephyr/: BuildInfo.cs  BuildInfo.cs.in  Zephyr.csproj  common_lib.cs
cs/po/: zh_CN.po  zh_TW.po
cs/scripts/: emit-strings-resx.py
cs/tests/: TestCommonLib.cs  TestCommonLib.csproj
debian/: control  copyright
erlang/: README-zh.md  README.md  meson.build
erlang/debian/: control
erlang/po/: POTFILES
erlang/src/: common_lib.erl  cpp_pch.hpp  puff1.erl
erlang/tests/: test_common_lib.erl
go/: .gitignore  README-zh.md  README.md  go.mod  go.sum  meson.build
go/cmd/puff1/: main.go
go/debian/: changelog  control  rules
go/internal/i18n/: i18n.go  locale.go
go/internal/zephyr/: copy.go  copy_test.go
go/po/: embed.go
haskell/: README-zh.md  README.md  meson.build
haskell/debian/: control
haskell/po/: LINGUAS  POTFILES  de.po  eo.po  fr.po  it.po  ja.po  ko.po  puff1.pot  th.po  vi.po  zh_CN.po  zh_TW.po
haskell/src/: Common_Lib.hs  Main.hs  puff1.c
haskell/tests/: TestCommon_Lib.hs
java/: README-zh.md  README.md  meson.build
java/debian/: control
java/po/: POTFILES  de.po  eo.po  fr.po  it.po  ja.po  ko.po  puff1.pot  th.po  vi.po  zh_CN.po  zh_TW.po
java/src/: Main.java  PuffLib.java  common_lib.java
java/tests/: TestCommonLib.java  TestPuffLib.java
node-ts/: README-zh.md  README.md  meson.build
node-ts/debian/: control
node-ts/po/: POTFILES  de.po  eo.po  fr.po  it.po  ja.po  ko.po  th.po  vi.po  zephyr.pot  zh_CN.po  zh_TW.po
node-ts/src/: common_lib.mjs  puff1.mjs  puff1.sh.in
node-ts/tests/: test_puff1.mjs
po/: POTFILES  de.po  eo.po  fr.po  it.po  ja.po  ko.po  meson.build  puff1.pot  th.po  vi.po  zephyr1.pot  zh_CN.po  zh_TW.po
python/: README-zh.md  README.md  meson.build
python/debian/: control  copyright
python/po/: POTFILES  de.po  eo.po  fr.po  it.po  ja.po  ko.po  puff1.pot  th.po  vi.po  zh_CN.po  zh_TW.po
python/src/: common_lib.py  puff1.py
python/tests/: test_puff1.py
rust/: Cargo.toml  README-zh.md  README.md  meson.build  puff1
rust/build-aux/: cargo-build.sh
rust/debian/: control
rust/po/: POTFILES
rust/src/: lib.rs  main.rs
smalltalk/: README-zh.md  README.md  meson.build
smalltalk/debian/: control
smalltalk/po/: POTFILES
smalltalk/src/: common_lib.st  puff1.st
smalltalk/tests/: test_common_lib.st
src/: bulk.hpp  lib.c  puff1.c  puff1.h  zephyr1.c  zephyr1.h
swift/: README-zh.md  README.md  meson.build
swift/debian/: control
swift/po/: POTFILES
swift/src/: common_lib.swift  main.swift
swift/tests/: TestCommonLib.swift
tests/: meson.build  zephyr1_test.c
