[package]
name = "puff1"
version = "1.0.0"
edition = "2021"
description = "Example cat-like CLI for the zephyr Rust project template"
license = "AGPL-3.0"
repository = "https://github.com/lenik/zephyr"
authors = ["Lenik <zephyr@bodz.net>"]
rust-version = "1.74"

[lib]
name = "zephyr"
path = "src/lib.rs"

[[bin]]
name = "puff1"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["color"] }
gettext-rs = "0.7"
log = "0.4"
thiserror = "1.0"
